--- a/FrontEnd/FrontEndCode/package.json
+++ b/FrontEnd/FrontEndCode/package.json
@@ -22,13 +22,25 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@igniteui/material-icons-extended": "^3.0.0",
+    "bootstrap": "^5.3.2",
     "fflate": "^0.7.3",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
+    "html2pdf.js": "^0.10.1",
     "igniteui-angular": "^16.0.23",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
     "minireset.css": "~0.0.4",
+    "ng2-pdf-viewer": "^10.0.0",
+    "ngx-export-as": "^1.16.0",
     "ngx-material-timepicker": "^13.1.1",
+    "ngx-print": "^1.3.1",
+    "papaparse": "^5.4.1",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
+    "signature_pad": "^4.1.6",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -36,8 +48,11 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@igniteui/angular-schematics": "~16.0.1200",
+    "@types/file-saver": "^2.0.6",
     "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
+    "@types/jspdf": "^2.0.0",
+    "@types/pdfmake": "^0.2.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
